--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.3",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "pg": "^8.11.3"
   },
